fix resize and scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@ body {
   box-sizing: border-box;
 }
 
+body, html {
+  width: 100%;
+  height: 100%;
+}
+
 div#root {
   font-family: verdana, sans-serif;
   font-size: 12px;
